<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <PreferenceCategory android:title="@string/Notify">

        <CheckBoxPreference
            android:id="@+id/cnScreenOn"
            android:defaultValue="false"
            android:key="screen_on_notify"
            android:title="@string/ScreenOnNotify" />
        <CheckBoxPreference
            android:id="@+id/cnUserPresents"
            android:defaultValue="false"
            android:key="user_presents_notify"
            android:title="@string/UserPresentsNotify" />
        <CheckBoxPreference
            android:id="@+id/cnFailedPassword"
            android:defaultValue="true"
            android:key="failed_password_notify"
            android:title="@string/AttemptNotify" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Logging">

        <CheckBoxPreference
            android:id="@+id/ctScreenOn"
            android:defaultValue="true"
            android:key="screen_on_track"
            android:title="@string/ScreenOnTracking" />
        <CheckBoxPreference
            android:id="@+id/ctUserPresents"
            android:defaultValue="true"
            android:key="user_presents_track"
            android:title="@string/UserPresentsTracking" />
        <CheckBoxPreference
            android:id="@+id/ctFailedPassword"
            android:defaultValue="true"
            android:key="failed_password_track"
            android:title="@string/AttemptTracking" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Photos">

        <CheckBoxPreference
            android:id="@+id/ctPhotoScreenOn"
            android:defaultValue="false"
            android:key="take_photo_screenon"
            android:title="@string/ScreenOnPhoto" />
        <CheckBoxPreference
            android:id="@+id/ctPhotoUserPresents"
            android:defaultValue="false"
            android:key="take_photo_user_presents"
            android:title="@string/UserPresentsPhoto" />
        <CheckBoxPreference
            android:id="@+id/cTakePhotoFailed"
            android:defaultValue="true"
            android:key="take_photo_failed"
            android:title="@string/AttemptPhoto" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/Other">

        <CheckBoxPreference
            android:id="@+id/chStartOnBoot"
            android:defaultValue="true"
            android:key="start_on_boot"
            android:title="@string/Startup" />
    </PreferenceCategory>
</PreferenceScreen>
